decal-macros/tests/ui/fail/invalid_node.rs
use decal::decal;

fn main() {
    let _ = decal! {
        Block {
            Spaghetti {
                Text("invalid")
            }
        }
    };
}
