decal-macros/tests/ui/fail/invalid_node.stderr
error: `Spaghetti` is not a valid node. Expected one of: Fragment, Snippet, Block, Flex, Column, Row, Grid, Text, Image
 --> tests/ui/fail/invalid_node.rs:6:13
  |
6 |             Spaghetti {
  |             ^^^^^^^^^
